style.css
@media (min-width: 769px) {
body {
    background-color: cadetblue;
    margin: 0;
    padding: 100px 0;
}
h1 {
    color:white;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 60px;
    padding-left: 10px;
}
h2 {
    color:midnightblue;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 40px;
    padding-left: 10px;
}
h3 {
    color:midnightblue;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 30px;
    font-weight: bolder;
    padding-left: 10px;
}
.hoofdtext{
    color:whitesmoke;
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-size: 17px;
    padding-left: 10px;
}
button {
    background-color:midnightblue;
    color:goldenrod;
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-size: 17px;
    width:50%;
    transform: translateX(50%);
    padding-bottom: 5px;
}
.Menu {
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 17px;
    text-align: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: lightskyblue;
    position: fixed;
    top: 0;
    border-style: solid; 
    border-color: rgb(23, 23, 89); 
    border-width: 4px;
    padding: 10px;
    border-radius: 10px;
    width: 95%;
    left: 50%;
    transform: translateX(-50%);
}
.Menu li {
    display: inline-block;
    float: none;
}
.Menu li a {
    display: table;
    color: white;
    padding: 14px 16px;
    text-decoration: none;
}
.Menu li a:hover {
    background-color: rgb(34, 34, 141);
}
body {
    background-color:cadetblue;
    margin: 0;
    padding: 0;
}

.MemberList{
    margin: 0;
    padding: 0;
    list-style-type:none;
}

.MemberList li{
    margin-bottom: 10px;
    color:white;
    font-family:fantasy;
}

.MemberList li::before {
    content: "📚";
    margin-right: 5px;
    margin-left: 5px;
    font-size: 80%;
    background-color:lightslategray;
    color: white;
    font-weight: bold;
    padding: 3px 8px;
    border-radius: 3px;
  }
}
@media (max-width: 768px) {
    h1 {
        color:white;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 48px;
        padding-left: 10px;
    }
    h2 {
        color:midnightblue;
        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
        font-size: 40px;
        padding-left: 10px;
    }
    h3 {
        color:midnightblue;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 30px;
        font-weight: bolder;
        padding-left: 10px;
    }
    .hoofdtext{
        color:whitesmoke;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        padding-left: 10px;
    }
    img {
        max-width: 100%;
    }
    button {
        background-color:midnightblue;
        color:goldenrod;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        width:100%;
        padding-bottom: 5px;
    }
    .Menu {
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 17px;
        display: inline-block;
        float: none;
        list-style-type: none;
        text-align: center;
        width: 100%;
        margin: 0;
        padding: 0;
        background-color: lightskyblue;
    }
    body {
        background-color:cadetblue;
        margin: 0;
        padding: 0;
    }
    nav {
        width: 100%;
    }
    .Menu li a {
        color: black;
        padding: 8px 16px;
        text-decoration: none;
    }
    .Menu li a:hover {
        background-color: #555555;
        color: white;
    }
}
@media (max-width: 380px) {
    h1 {
        color:white;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 45px;
        padding-left: 5px;
        padding-right: 5px;
    }
    h2 {
        color:midnightblue;
        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
        font-size: 40px;
        padding-left: 5px;
        padding-right: 5px;
    }
    h3 {
        color:midnightblue;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 30px;
        font-weight: bolder;
        padding-left: 5px;
        padding-right: 5px;
    }
    .hoofdtext{
        color:whitesmoke;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        padding-left: 5px;
        padding-right: 5px;
    }
    img {
        max-width: 100%;
    }
    button {
        background-color:midnightblue;
        color:goldenrod;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        width:100%;
        padding-bottom: 5px;
    }
    .Menu {
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 17px;
        display: inline-block;
        float: none;
        list-style-type: none;
        text-align: center;
        width: 100%;
        margin: 0;
        padding: 0;
        background-color: lightskyblue;
    }
    body {
        background-color:cadetblue;
        margin: 0;
        padding: 0;
    }
    nav {
        width: 100%;
    }
    .Menu li a {
        color: black;
        padding: 8px 16px;
        text-decoration: none;
    }
    .Menu li a:hover {
        background-color: #555555;
        color: white;
    }
}
@media (max-width: 350px){
    h1 {
        color:white;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 40px;
        padding-left: 5px;
        padding-right: 5px;
    }
    h2 {
        color:midnightblue;
        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
        font-size: 35px;
        padding-left: 5px;
        padding-right: 5px;
    }
    h3 {
        color:midnightblue;
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 30px;
        font-weight: bolder;
        padding-left: 5px;
        padding-right: 5px;
    }
    .hoofdtext{
        color:whitesmoke;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        padding-left: 5px;
        padding-right: 5px;
    }
    img {
        max-width: 100%;
    }
    button {
        background-color:midnightblue;
        color:goldenrod;
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        width:100%;
        padding-bottom: 5px;
    }
    .Menu {
        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        font-size: 17px;
        display: inline-block;
        float: none;
        list-style-type: none;
        text-align: center;
        width: 100%;
        margin: 0;
        padding: 0;
        background-color: lightskyblue;
    }
    body {
        background-color:cadetblue;
        margin: 0;
        padding: 0;
    }
    nav {
        width: 100%;
    }
    .Menu li a {
        color: black;
        padding: 8px 16px;
        text-decoration: none;
    }
    .Menu li a:hover {
        background-color: #555555;
        color: white;
    }
}

